devops-project/k8s/service.yaml

apiVersion: v1
kind: Service
metadata:
  name: portfolio-svc
  namespace: devops-portfolio
spec:
  type: LoadBalancer
  selector:
    app: portfolio
  ports:
    - port: 80
      targetPort: 8080
